PioniPresenter: Add sounds

--- a/Proiect_AppUI/Joc.WinForms.csproj
+++ b/Proiect_AppUI/Joc.WinForms.csproj
@@ -224,6 +224,21 @@
   <ItemGroup>
     <None Include="Resources\roll_disabled.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\go_home.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\move.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\roll_dice.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\winner.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\start_game.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
