--- a/Proiect_AppUI/Joc.WinForms.csproj
+++ b/Proiect_AppUI/Joc.WinForms.csproj
@@ -46,10 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigurareJocForm.cs">
+    <Compile Include="View\ConfigurareJocForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ConfigurareJocForm.Designer.cs">
+    <Compile Include="View\ConfigurareJocForm.Designer.cs">
       <DependentUpon>ConfigurareJocForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Zar.cs" />
@@ -71,7 +71,7 @@
     <Compile Include="Presenter\PioniPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ConfigurareJocForm.resx">
+    <EmbeddedResource Include="View\ConfigurareJocForm.resx">
       <DependentUpon>ConfigurareJocForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\InstructiuniForm.resx">
@@ -90,6 +90,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
